// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot of expense summary with 0 expense 1`] = `<div />`;

exports[`snapshot of expense summary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 1 expense totalling $200.00
  </h2>
</div>
`;

exports[`snapshot of expense summary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 3 expenses totalling $900.00
  </h2>
</div>
`;
